# bmc

./: Cargo.toml  LICENSE-MIT  README.md  flake.nix
.doc/: home.nix
chunk_generator/: Cargo.toml
chunk_generator/src/: lib.rs
core/: Cargo.toml
core/src/: main.rs
core/src/tool/: fps.rs  mod.rs  noclip_cam.rs
