[package]
name = "chunk_generator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bevy = { workspace = true, default-features = false, features = [
    "bevy_render",
] }
rand = "0.9.2"
# noise = { version = "0.9.0", features = ["images"] }
# glm = "0.2.3"
